// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CdrHeadingSans > default configuration > renders correctly 1`] = `
<h2
  class="cdr-heading-sans"
  style="--cdr-heading-sans-font-size: var(--cdr-type-scale-3); --cdr-heading-line-height: var(--cdr-line-height-ratio-heading-3);"
>
  
  paragraph
  
</h2>
`;

exports[`CdrHeadingSans > passing a scale > renders correctly 1`] = `
<h2
  class="cdr-heading-sans"
  style="--cdr-heading-sans-font-size: var(--cdr-type-scale-1); --cdr-heading-line-height: var(--cdr-line-height-ratio-heading-1);"
>
  
  paragraph
  
</h2>
`;
